fixed lines and header on portrait mode of calendar

--- a/Calendar/css/FHSchedCalendar_V_1.11.css
+++ b/Calendar/css/FHSchedCalendar_V_1.11.css
@@ -94,6 +94,7 @@ body.dark .nav-bar
 
 .header{
 margin-bottom: 10px;
+height:92px;
 }
 
 body.dark .header
@@ -324,6 +325,9 @@ footer p
 {
   padding-bottom:520px;
 }
+.dycalendar-month-container .dycalendar-target-date, .dycalendar-today-date{
+  bottom:100px;
+}
 @media screen and (orientation:landscape)
 {
   .bottom-space
@@ -331,7 +335,12 @@ footer p
     padding-bottom:550px;
   }
 }
-
+@media screen and (orientation: portrait){
+  .header{
+    width:148vw;
+    height: 7.7vh;
+  }
+}
 @font-face
 {
   font-family: "anton";
