--- a/css/Template_Mode_1.0.css
+++ b/css/Template_Mode_1.0.css
@@ -178,54 +178,21 @@ body.template footer
   transition: background-color 0.3s;
 }
 
-body.template .container1
-{
-  color: RGB(255,255,255);
-  background: #aaa;
-  transition: color 0.3s;
-}
-
-body.template .container2
-{
-  color: RGB(255,255,255);
-  background: #aaa;
-  transition: color 0.3s;
-}
-
-body.template .containerGreyRim{
-  background: #aaa;
-  transition: background-color 0.3s;
-}
-
-body.template .containerRim{
-  background: #000;
-  transition: background-color 0.3s;
-}
-
-body.template .featuredSportSplash
-{
-  color: RGB(255,255,255);
-  background: #aaa;
-  transition:color 0.3s;
-}
-
-body.template .dycalendar-month-container
-{
-  color: RGB(255,255,255);
-  transition: color 0.3s;
-}
-
-body.template .dycalendar-month-container .dycalendar-target-date,.dycalendar-month-container .dycalendar-today-date
-{
-  color: RGB(255,255,255);
-  transition: color 0.3s;
-}
-
-
 @font-face
 {
   font-family: "anton";
   src: url(www.fhsched.com/fonts/Anton-Regular.ttf);
   font-style: normal;
   font-weight: 100;
+}
+
+body.template .about-header
+{
+  background-color:rgb(210,210,210);
+  color: RGB(255,255,255);
+}
+body.template .team
+{
+  background-color:rgb(210,210,210);
+  color: RGB(255,255,255);
 }
