--- a/css/Midnight_Mode_1.0.css
+++ b/css/Midnight_Mode_1.0.css
@@ -1,6 +1,6 @@
 @import url("dycalendar.min.css");
 
-body.halloween
+body.midnight
 {
   background-image: none;
   background-color: darkorange;
@@ -10,11 +10,11 @@ body.halloween
 }
 
 /*This is unique to this theme*/
-body.halloween .sched-img{
+body.midnight .sched-img{
  position: fixed;
  margin-bottom: -3px;
 }
-body.halloween .period-display{
+body.midnight .period-display{
 
   color: white;
   text-align: center;
@@ -32,135 +32,136 @@ body.halloween .period-display{
   }
 }
 
-body.halloween .timer{
+body.midnight .timer{
   color: rgb(180,180,180);
   -webkit-animation: glow 1s ease-in-out infinite alternate;
   -moz-animation: glow 1s ease-in-out infinite alternate;
   animation: glow 1s ease-in-out infinite alternate;
 }
-body.halloween .container1{
+body.midnight .container1{
 color: rgb(220,60,60);
 
   transition: background-color 0.3s;
 }
-body.halloween .container2{
+body.midnight .container2{
 color: rgb(220,60,60);
   transition: background-color 0.3s;
 }
-body.halloween .featuredSportSplash{
+body.midnight .featuredSportSplash{
 color: rgb(220,60,60);
 }
 
-body.halloween .dycalendar-month-container{
+body.midnight .dycalendar-month-container{
 color: rgb(220,60,60);
 }
 
-body.halloween .dycalendar-month-container .dycalendar-target-date,.dycalendar-month-container .dycalendar-today-date
+body.midnight .dycalendar-month-container .dycalendar-target-date,.dycalendar-month-container .dycalendar-today-date
 {
 color: rgb(220,60,60);
 }
 
-body.halloween a:link
+body.midnight a:link
 {
   color: white;
 }
 
-body.halloween a:visited
+body.midnight a:visited
 {
   color: white;
 }
 
-body.halloween a:hover
+body.midnight a:hover
 {
   color: darkgray;
 }
 
-body.halloween a:active {
+body.midnight a:active {
   color: darkgray;
 }
 
-body.halloween .header
+body.midnight .header
 {
   background-color: black;
   transition: background-color 0.3s;
 text-align: center;
 }
 
-body.halloween .header a
+body.midnight .header a
 {
   color: white;
 }
 
-body.halloween .slider
+body.midnight .slider
 {
   background: RGB(40,40,40,0.95);
   transition: all 0.3s;
 }
-body.halloween .slider li a
+body.midnight .slider li a
 {
   color: RGB(255,255,255);
 }
-body.halloween .slider li a:hover
+body.midnight .slider li a:hover
 {
   background: RGB(20,20,20,0.7);
   color: darkgray;
 }
-body.halloween .slider .close-sidebar:hover
+body.midnight .slider .close-sidebar:hover
 {
   background: RGB(20,20,20,0.7);
 }
 
-body.halloween .national-guard-banner
+body.midnight .national-guard-banner
 {
   background: RGB(30,30,30,0.98);
 }
-body.halloween .national-guard-banner a
+body.midnight .national-guard-banner a
 {
   color: RGB(255,255,255);
 }
-body.halloween .national-guard-banner a:hover
+body.midnight .national-guard-banner a:hover
 {
   color: RGB(160,160,160);
 }
-body.halloween .national-guard-banner .container .close-sidebar:hover
+body.midnight .national-guard-banner .container .close-sidebar:hover
 {
   background: RGB(15,15,15,0.7);
 }
 
-body.halloween .ham-a
+body.midnight .ham-a
 {
   background-color: rgb(0,0,0);
   transition: background-color 0.3s;
 }
-body.halloween #ham-switch{
+body.midnight #ham-switch{
   content: url("../images/full-moon.png") !important;
+
 }
-body.halloween .ham-a:hover
+body.midnight .ham-a:hover
 {
   background-color: rgb(60,60,60);
 
 }
 
-body.halloween .time-schedule
+body.midnight .time-schedule
 {
   color: black;
   background-color:#191919;
   transition: background-color 0.3s;
 }
 
-body.halloween .period-countdown
+body.midnight .period-countdown
 {
   color: white;
   transition: background-color 0.3s;
 }
 
-body.halloween .remaining-time
+body.midnight .remaining-time
 {
   color: white;
   transition: background-color 0.3s;
 }
 
-body.halloween .dot
+body.midnight .dot
 {
   background-color:black;
   -webkit-animation: glow-b 1s ease-in-out infinite alternate;
@@ -175,7 +176,7 @@ body.halloween .dot
     box-shadow: 0 0 20px #fff, 0 0 30px black, 0 0 40px black, 0 0 50px black, 0 0 60px black, 0 0 30px black, 0 0 30px black;
   }
 }
-body.halloween .dot-cur
+body.midnight .dot-cur
 {
   background-color:orange;
   transition: background-color 0.3s;
@@ -191,33 +192,33 @@ body.halloween .dot-cur
     box-shadow: 0 0 20px #fff, 0 0 30px orange, 0 0 40px orange, 0 0 50px orange, 0 0 60px orange, 0 0 30px orange, 0 0 30px orange;
   }
 }
-body.halloween .dot:hover {
+body.midnight .dot:hover {
   background-color: darkgray;
 }
 
 
-body.halloween .splash {
+body.midnight .splash {
   color: black;
   background-color:white;
   transition: background-color 0.3s;
 }
 
-body.halloween .splash a
+body.midnight .splash a
 {
   color: gray;
 }
-body.halloween .splash a:hover
+body.midnight .splash a:hover
 {
   color: dimgray;
 }
 
-body.halloween .btn {
+body.midnight .btn {
   color: darkorange;
   background-color:white;
   background-color:#191919;
   transition: all 0.3s;
 }
-body.halloween .btn:hover {
+body.midnight .btn:hover {
   color: orange;
   background-color:lightgray;
   background-color:RGB(50,50,50);
@@ -228,13 +229,13 @@ transition: all 0s;
 animation: glow-o 1s ease-in-out infinite alternate;
 }
 
-body.halloween .lunchBtn
+body.midnight .lunchBtn
 {
   color:white;
   background-color:black;
   transition: all 0.3s;
 }
-body.halloween .lunchBtn:hover
+body.midnight .lunchBtn:hover
 {
   color:gainsboro;
   background-color:RGB(50,50,50);
@@ -244,13 +245,13 @@ body.halloween .lunchBtn:hover
   animation: glow-o 1s ease-in-out infinite alternate;
 }
 
-body.halloween .wrongLunchBtn
+body.midnight .wrongLunchBtn
 {
   color:white;
   background-color:black;
   transition: all 0.3s;
 }
-body.halloween .wrongLunchBtn:hover
+body.midnight .wrongLunchBtn:hover
 {
   color:gainsboro;
   background-color:RGB(50,50,50);
@@ -260,7 +261,7 @@ body.halloween .wrongLunchBtn:hover
   animation: glow-o 1s ease-in-out infinite alternate;
 }
 
-body.halloween footer
+body.midnight footer
 {
   color: RGB(255,255,255);
   background-color: #191919;
@@ -275,18 +276,18 @@ body.halloween footer
   font-weight: 100;
 }
 
-body.halloween .about-header
+body.midnight .about-header
 {
   background-color:white;
   color: black;
 }
-body.halloween .team
+body.midnight .team
 {
   background-color:rgb(255,255,255);
   color: black;
 }@import url("dycalendar.min.css");
 
-body.halloween
+body.midnight
 {
   background-image: none;
   background-color: darkorange;
@@ -296,11 +297,11 @@ body.halloween
 }
 
 /*This is unique to this theme*/
-body.halloween .sched-img{
+body.midnight .sched-img{
  position: fixed;
  margin-bottom: -3px;
 }
-body.halloween .period-display{
+body.midnight .period-display{
 
   color: white;
   text-align: center;
@@ -318,135 +319,135 @@ body.halloween .period-display{
   }
 }
 
-body.halloween .timer{
+body.midnight .timer{
   color: rgb(180,180,180);
   -webkit-animation: glow 1s ease-in-out infinite alternate;
   -moz-animation: glow 1s ease-in-out infinite alternate;
   animation: glow 1s ease-in-out infinite alternate;
 }
-body.halloween .container1{
+body.midnight .container1{
 color: rgb(220,60,60);
 
   transition: background-color 0.3s;
 }
-body.halloween .container2{
+body.midnight .container2{
 color: rgb(220,60,60);
   transition: background-color 0.3s;
 }
-body.halloween .featuredSportSplash{
+body.midnight .featuredSportSplash{
 color: rgb(220,60,60);
 }
 
-body.halloween .dycalendar-month-container{
+body.midnight .dycalendar-month-container{
 color: rgb(220,60,60);
 }
 
-body.halloween .dycalendar-month-container .dycalendar-target-date,.dycalendar-month-container .dycalendar-today-date
+body.midnight .dycalendar-month-container .dycalendar-target-date,.dycalendar-month-container .dycalendar-today-date
 {
 color: rgb(220,60,60);
 }
 
-body.halloween a:link
+body.midnight a:link
 {
   color: white;
 }
 
-body.halloween a:visited
+body.midnight a:visited
 {
   color: white;
 }
 
-body.halloween a:hover
+body.midnight a:hover
 {
   color: darkgray;
 }
 
-body.halloween a:active {
+body.midnight a:active {
   color: darkgray;
 }
 
-body.halloween .header
+body.midnight .header
 {
   background-color: black;
   transition: background-color 0.3s;
 text-align: center;
 }
 
-body.halloween .header a
+body.midnight .header a
 {
   color: white;
 }
 
-body.halloween .slider
+body.midnight .slider
 {
   background: RGB(40,40,40,0.95);
   transition: all 0.3s;
 }
-body.halloween .slider li a
+body.midnight .slider li a
 {
   color: RGB(255,255,255);
 }
-body.halloween .slider li a:hover
+body.midnight .slider li a:hover
 {
   background: RGB(20,20,20,0.7);
   color: darkgray;
 }
-body.halloween .slider .close-sidebar:hover
+body.midnight .slider .close-sidebar:hover
 {
   background: RGB(20,20,20,0.7);
 }
 
-body.halloween .national-guard-banner
+body.midnight .national-guard-banner
 {
   background: RGB(30,30,30,0.98);
 }
-body.halloween .national-guard-banner a
+body.midnight .national-guard-banner a
 {
   color: RGB(255,255,255);
 }
-body.halloween .national-guard-banner a:hover
+body.midnight .national-guard-banner a:hover
 {
   color: RGB(160,160,160);
 }
-body.halloween .national-guard-banner .container .close-sidebar:hover
+body.midnight .national-guard-banner .container .close-sidebar:hover
 {
   background: RGB(15,15,15,0.7);
 }
 
-body.halloween .ham-a
+body.midnight .ham-a
 {
   background-color: rgb(0,0,0);
   transition: background-color 0.3s;
 }
-body.halloween #ham-switch{
+body.midnight #ham-switch{
   content: url("../images/full-moon.png") !important;
 }
-body.halloween .ham-a:hover
+body.midnight .ham-a:hover
 {
   background-color: rgb(60,60,60);
 
 }
 
-body.halloween .time-schedule
+body.midnight .time-schedule
 {
   color: black;
   background-color:#191919;
   transition: background-color 0.3s;
 }
 
-body.halloween .period-countdown
+body.midnight .period-countdown
 {
   color: white;
   transition: background-color 0.3s;
 }
 
-body.halloween .remaining-time
+body.midnight .remaining-time
 {
   color: white;
   transition: background-color 0.3s;
 }
 
-body.halloween .dot
+body.midnight .dot
 {
   background-color:black;
   -webkit-animation: glow-b 1s ease-in-out infinite alternate;
@@ -461,7 +462,7 @@ body.halloween .dot
     box-shadow: 0 0 20px #fff, 0 0 30px black, 0 0 40px black, 0 0 50px black, 0 0 60px black, 0 0 30px black, 0 0 30px black;
   }
 }
-body.halloween .dot-cur
+body.midnight .dot-cur
 {
   background-color:orange;
   transition: background-color 0.3s;
@@ -477,33 +478,33 @@ body.halloween .dot-cur
     box-shadow: 0 0 20px #fff, 0 0 30px orange, 0 0 40px orange, 0 0 50px orange, 0 0 60px orange, 0 0 30px orange, 0 0 30px orange;
   }
 }
-body.halloween .dot:hover {
+body.midnight .dot:hover {
   background-color: darkgray;
 }
 
 
-body.halloween .splash {
+body.midnight .splash {
   color: black;
   background-color:white;
   transition: background-color 0.3s;
 }
 
-body.halloween .splash a
+body.midnight .splash a
 {
-  color: gray;
+  color: orange;
 }
-body.halloween .splash a:hover
+body.midnight .splash a:hover
 {
-  color: dimgray;
+  color: darkorange;
 }
 
-body.halloween .btn {
+body.midnight .btn {
   color: darkorange;
   background-color:white;
   background-color:#191919;
   transition: all 0.3s;
 }
-body.halloween .btn:hover {
+body.midnight .btn:hover {
   color: orange;
   background-color:lightgray;
   background-color:RGB(50,50,50);
@@ -514,13 +515,13 @@ transition: all 0s;
 animation: glow-o 1s ease-in-out infinite alternate;
 }
 
-body.halloween .lunchBtn
+body.midnight .lunchBtn
 {
   color:white;
   background-color:black;
   transition: all 0.3s;
 }
-body.halloween .lunchBtn:hover
+body.midnight .lunchBtn:hover
 {
   color:gainsboro;
   background-color:RGB(50,50,50);
@@ -530,13 +531,13 @@ body.halloween .lunchBtn:hover
   animation: glow-o 1s ease-in-out infinite alternate;
 }
 
-body.halloween .wrongLunchBtn
+body.midnight .wrongLunchBtn
 {
   color:white;
   background-color:black;
   transition: all 0.3s;
 }
-body.halloween .wrongLunchBtn:hover
+body.midnight .wrongLunchBtn:hover
 {
   color:gainsboro;
   background-color:RGB(50,50,50);
@@ -546,7 +547,7 @@ body.halloween .wrongLunchBtn:hover
   animation: glow-o 1s ease-in-out infinite alternate;
 }
 
-body.halloween footer
+body.midnight footer
 {
   color: RGB(255,255,255);
   background-color: #191919;
@@ -561,12 +562,12 @@ body.halloween footer
   font-weight: 100;
 }
 
-body.halloween .about-header
+body.midnight .about-header
 {
   background-color:white;
   color: black;
 }
-body.halloween .team
+body.midnight .team
 {
   background-color:rgb(255,255,255);
   color: black;
